--- a/styles.css
+++ b/styles.css
@@ -2,3 +2,35 @@
 ul {
     list-style-type: decimal;
   }
+
+body{
+background-color:rgba(139, 251, 255, 0.281);
+margin-top: 8px;
+margin-bottom: 8px;
+margin-left: 8px;
+margin-right: 8px;
+padding-top: 50px;
+padding-right: 50px;
+padding-bottom: 50px;
+padding-left: 50px;
+}
+
+#mainHeading{
+    color: red;
+    font-size: 50px;
+}
+
+.funParagraph{
+    color:green;
+    font-size: 25px;
+}
+
+footer{
+    font-style: italic;
+    font-weight: bold;
+    font-size: 25px;
+}
+
+h2{
+    text-decoration: underline;
+}
