--- a/styles.css
+++ b/styles.css
@@ -5,14 +5,8 @@ ul {
 
 body{
 background-color:rgba(139, 251, 255, 0.281);
-margin-top: 8px;
-margin-bottom: 8px;
-margin-left: 8px;
-margin-right: 8px;
-padding-top: 50px;
-padding-right: 50px;
-padding-bottom: 50px;
-padding-left: 50px;
+margin: 8px;
+padding: 50px;
 }
 
 #mainHeading{
